deps: regenerate sdk
