# openapi.filtered.yaml
@@ -331,6 +331,39 @@ paths:
         - personalAccessToken: []
       tags:
         - project
+  /v1/projects/{projectOrProductUID}:
+    delete:
+      operationId: deleteProject
+      description: Delete a Project by ProjectUID
+      parameters:
+        - $ref: "#/components/parameters/projectOrProductUIDParam"
+      responses:
+        "200":
+          description: Successful operation
+        default:
+          $ref: "#/components/responses/ErrorResponse"
+      security:
+        - personalAccessToken: []
+      tags:
+        - project
+    get:
+      operationId: getProject
+      description: Get a Project by ProjectUID
+      parameters:
+        - $ref: "#/components/parameters/projectOrProductUIDParam"
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Project"
+        default:
+          $ref: "#/components/responses/ErrorResponse"
+      security:
+        - personalAccessToken: []
+      tags:
+        - project
   /v1/projects/{projectOrProductUID}/alerts:
     get:
       operationId: getAlerts
@@ -850,6 +883,19 @@ paths:
       parameters:
         - $ref: "#/components/parameters/projectOrProductUIDParam"
         - $ref: "#/components/parameters/deviceUIDParam"
+        - $ref: "#/components/parameters/startDateParam"
+        - $ref: "#/components/parameters/endDateParam"
+        - name: log_type
+          in: query
+          description: Return only specified log types
+          required: false
+          schema:
+            type: array
+            items:
+              enum:
+                - boot
+                - dfu_completed
+              type: string
       responses:
         "200":
           description: Successful operation
@@ -1100,6 +1146,24 @@ paths:
         - personalAccessToken: []
       tags:
         - device
+  /v1/projects/{projectOrProductUID}/devices/{deviceUID}/plans:
+    get:
+      operationId: getDevicePlans
+      description:
+        Get Data Plans associated with the device, this include the primary
+        sim, any external sim, as well as any satellite connections.
+      responses:
+        "200":
+          $ref: "#/components/responses/DevicePlansResponse"
+        default:
+          $ref: "#/components/responses/ErrorResponse"
+      security:
+        - api_key: []
+      tags:
+        - device
+    parameters:
+      - $ref: "#/components/parameters/projectOrProductUIDParam"
+      - $ref: "#/components/parameters/deviceUIDParam"
   /v1/projects/{projectOrProductUID}/devices/{deviceUID}/provision:
     post:
       operationId: postProvisionProjectDevice
@@ -2053,7 +2117,7 @@ paths:
         - monitor
   /v1/projects/{projectOrProductUID}/products:
     get:
-      operationId: getProjectProducts
+      operationId: getProducts
       description: Get Products within a Project
       responses:
         "200":
@@ -2119,6 +2183,22 @@ paths:
         - personalAccessToken: []
       tags:
         - project
+  /v1/projects/{projectOrProductUID}/products/{productUID}:
+    delete:
+      operationId: deleteProduct
+      description: Delete a product
+      responses:
+        "204":
+          description: Successful operation
+        default:
+          $ref: "#/components/responses/ErrorResponse"
+      security:
+        - personalAccessToken: []
+      tags:
+        - project
+    parameters:
+      - $ref: "#/components/parameters/projectOrProductUIDParam"
+      - $ref: "#/components/parameters/productUIDParam"
   /v1/projects/{projectOrProductUID}/routes:
     get:
       operationId: getRoutes
@@ -2429,7 +2509,9 @@ paths:
   /v1/projects/{projectOrProductUID}/usage/events:
     get:
       operationId: getProjectEventsUsage
-      description: Get events usage for a project with time range and period aggregation
+      description: Get events usage for a project with time range and period
+        aggregation, when endDate is 0 or unspecified the current time is
+        implied
       parameters:
         - $ref: "#/components/parameters/projectOrProductUIDParam"
         - $ref: "#/components/parameters/startDateParam"
@@ -2461,7 +2543,9 @@ paths:
   /v1/projects/{projectOrProductUID}/usage/route-logs:
     get:
       operationId: getRouteLogsUsage
-      description: Get route logs usage for a project with time range and period aggregation
+      description: Get route logs usage for a project with time range and period
+        aggregation, when endDate is 0 or unspecified the current time is
+        implied
       parameters:
         - $ref: "#/components/parameters/projectOrProductUIDParam"
         - $ref: "#/components/parameters/startDateParam"
@@ -2493,7 +2577,9 @@ paths:
   /v1/projects/{projectOrProductUID}/usage/sessions:
     get:
       operationId: getSessionsUsage
-      description: Get sessions usage for a project with time range and period aggregation
+      description: Get sessions usage for a project with time range and period
+        aggregation, when endDate is 0 or unspecified the current time is
+        implied
       parameters:
         - $ref: "#/components/parameters/projectOrProductUIDParam"
         - $ref: "#/components/parameters/startDateParam"
@@ -2636,39 +2722,6 @@ paths:
         - personalAccessToken: []
       tags:
         - webhook
-  /v1/projects/{projectUID}:
-    delete:
-      operationId: deleteProject
-      description: Delete a Project by ProjectUID
-      parameters:
-        - $ref: "#/components/parameters/projectOrProductUIDParam"
-      responses:
-        "200":
-          description: Successful operation
-        default:
-          $ref: "#/components/responses/ErrorResponse"
-      security:
-        - personalAccessToken: []
-      tags:
-        - project
-    get:
-      operationId: getProject
-      description: Get a Project by ProjectUID
-      parameters:
-        - $ref: "#/components/parameters/projectOrProductUIDParam"
-      responses:
-        "200":
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Project"
-        default:
-          $ref: "#/components/responses/ErrorResponse"
-      security:
-        - personalAccessToken: []
-      tags:
-        - project
 components:
   parameters:
     cursorParam:
@@ -3359,6 +3412,42 @@ components:
       properties:
         body:
           type: object
+    CellularPlan:
+      type: object
+      properties:
+        activated:
+          description: Unix timestamp of when the SIM was activated
+          type: integer
+          format: int64
+          example: 1656010061
+        data_usage:
+          $ref: "#/components/schemas/DataUsage"
+        expires_at:
+          type: integer
+          format: int64
+        iccid:
+          description: The Integrated Circuit Card Identifier of the SIM card
+          type: string
+          example: "345678432765434567890765746354465786"
+        imsi:
+          description: IMSI of the SIM card
+          type: string
+          example: "310170830688975"
+        last_updated:
+          description: Time this plan information was last updated
+          type: integer
+          format: int64
+          example: 1656010061
+        lifetime_used:
+          description: Total bytes used by this SIM
+          type: integer
+          format: int64
+        plan_type:
+          description:
+            Description of the SIM plan type including data allowance, region,
+            and validity period
+          type: string
+          example: 500MB, North America, 10-year lifetime
     CellularUsage:
       type: array
       items:
@@ -3523,6 +3612,28 @@ components:
         name:
           description: The name of the field
           type: string
+    DataUsage:
+      type: object
+      properties:
+        kb_remaining:
+          description: Kilobytes remaining in the plan
+          type: number
+          format: double
+          example: 372.55
+        kb_total:
+          description: Total Kilobytes included in the plan
+          type: number
+          format: double
+          example: 500
+        kb_used:
+          description: Kilobytes used to date
+          type: number
+          format: double
+          example: 127.45
+      required:
+        - kb_total
+        - kb_used
+        - kb_remaining
     Device:
       type: object
       properties:
@@ -4728,6 +4839,35 @@ components:
         url:
           description: The URL of the route.
           type: string
+    SatellitePlan:
+      type: object
+      properties:
+        activated:
+          description: Activation date of the satellite plan as Unix timestamp
+          type: integer
+          format: int64
+          example: 1609459200
+        billable_bytes:
+          $ref: "#/components/schemas/DataUsage"
+        last_updated:
+          description: Time this plan information was last updated
+          type: integer
+          format: int64
+          example: 1656010061
+        ntn_provider:
+          description: Non-Terrestrial Network provider name
+          type: string
+          example: Skylo
+        psid:
+          description: Provider-specific identifier for the satellite subscription
+          type: string
+          example: skylo:5746354465786
+      nullable: true
+      required:
+        - ntn_provider
+        - psid
+        - activated
+        - cumulative_billable_bytes
     SchemaProperty:
       type: object
       properties:
@@ -5857,6 +5997,18 @@ components:
             required:
               - alerts
               - has_more
+    DevicePlansResponse:
+      description: Response body for /plans
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              cellular_plans:
+                type: array
+                items:
+                  $ref: "#/components/schemas/CellularPlan"
+                nullable: true
     DevicesResponse:
       description: List of Devices
       content:
